--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <header>
-    <img src="ibt.png" alt="Logo Itera Basketball Team" class="logo" width="" height="200">
+    <img src="images/ibt.png" alt="Logo Itera Basketball Team" class="logo" width="" height="200">
     <h1>ITERA Basketball Team</h1>
    <nav>
     <ul>
@@ -40,4 +40,5 @@
     </footer>
     
 </body>
+
 </html>
